--- a/style.css
+++ b/style.css
@@ -1,19 +1,24 @@
 body {
     font-family:'Times New Roman', Times, serif;
     background-color: rgb(0,0,0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
 #quiz {
-    max-width: 5000px;
-    margin: 0 auto;
+    max-width: 1000px;
     padding: 20px;
     background-color: rgb(0, 128, 128);
     border-radius: 10px;
+    text-align: center;
 }
 h1 {
     text-align: center;
     color: 	#000000;
 }
 #question {
+    text-align: center;
     margin-bottom: 30px;
 }
 #options {
